# ChangeLog for net-analyzer/skipfish
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Metadata.xml fixed
