@@ -1,1 +1,1 @@
-DIST skipfish-1.05b.tgz 180023 SHA256 4cc0d74dfa5fdb014876cbabed0d51a5b110075a4f42c5099e87696d6f6490b8
+DIST skipfish-2.10b.tgz 244528 SHA256 1a4fbc9d013f1f9b970946ea7228d943266127b7f4100c994ad26c82c5352a9e SHA512 ef961cbd6794083779a3e0d1a51dc68b6d0b580b840b213a16cf6dc4d2af858121db8527dcc590cf76efe6cdf0e2ee02dbb7a61956eb0017e9005a19f3537a74 WHIRLPOOL 7b22e892cd90a7ae616cf309849e5ec63b38224a670cbf726c2aeb1d66ea6a2aa7d69e5479d6c0b84f4fb48edf08bf4da7d76a727b0cc42b0f4e55bc8f0472c4
