@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/skipfish
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -skipfish-1.05_beta.ebuild,
+  +skipfish-2.10_beta.ebuild, metadata.xml:
+  Bump to EAPI=5; Version BUmp; REspect CC and CFLAGS
 
   10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Metadata.xml fixed
